--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "next": "^6.1.2",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.0",
+    "react-webcam": "^1.0.1"
   }
 }
